Configurar o acesso a dados de post

--- a/AspNetPro.Blog/appsettings.Development.json
+++ b/AspNetPro.Blog/appsettings.Development.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "BlogConnection": "server=LAPTOP-696GJNV6\\SQLEXPRESS01;database=aspnetpro-blog-db;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
